Stacks 2.0 
--------------------------------
    Feature: populations: Now calculated deviation from Hardy-Weinberg equilibrium at the SNP level
             (using an exact test), and at the haplotype level (using Guo+Thompson's MCMC algorithm).
    Feature: populations: added an export type for FineRADStructure. 

Stacks 2.0 Beta 7 - Dec 29, 2017
--------------------------------
    Feature: gstacks: Added an option to remove PCR duplicates based on insert
             size (--rm-pcr-duplicates, plus the related --rm-unpaired-reads).
    Feature: populations: Added a haplotype Genepop export.
    Feature: populations: improved the help; changed the output names for SNP
             files to 'populations.snps.EXT'; added option --no_hap_exports.
    Feature: gstacks and populations: Clarified the logs; moved distributions
             to a separate '.xlog' file and added script stacks-xlog-extract.
    Feature: gstacks: Tweaked the help/interface; especially, replaced --spacer
             with --suffix (for BAM directory input).
    Feature: Added enzymes BfuI and HinP1.
    Feature: Added option --inline_null to clone_filter.
    Bugfix: gstacks: Fixed a typo preventing the paired reads from being merged.
    Bugfix: populations: Fixed a segfault that occurred with some large datasets.
    Bugfix: Made VCF outputs more standard compliant.
    Bugfix: populations: Repaired --fasta_samples and --fasta_samples_raw.
    Bugfix: populations: Fixed population aborting at the end of the run
            when an export option was specified multiple times.
    Bugfix: gstacks: Adjusted progression report for catalog asymmetry.
    Bugfix: Fixed installation of stacks-integrate-alignments on MacOS.

Stacks 2.0 Beta 6 - Dec 02, 2017
--------------------------------
    Feature: Implmented the VCF haplotypes output.
    Bugfix:  Corrected asset failure in populations when exporting data for genepop or structure output. 

Stacks 2.0 Beta 5 - Nov 27, 2017